# precedence

./: .gitignore  Dockerfile  README.md  REPO_STATUS.md  api-endpoints.md  check_pm_sdk.py  database-schema.md  implementation-plan.md  index.html  precedence-tech-architecture.md  railway.json  solana-smart-contracts.md  start_backend.py  test_api_connection.py  test_api_endpoints.py  test_api_import.py  test_env.py  test_imports.py  trump_cases.json  trump_cases_v2.json  vercel.json  wallet-connect.html  whitepaper.html
.beads/: issues.jsonl
backend/: Dockerfile  Dockerfile.websocket  README.md  __init__.py  court_listener_api.py  database.py  debug_imports.py  docker-compose.yml  generate_test_wallet.py  main.py  package-lock.json  package.json  requirements-minimal.txt  requirements.txt  setup_database.py  test_cl_api.py  test_enhanced_predictions.py  test_integration.py  test_phase4_smoke.py  test_pm_api.py  test_relay.js  test_safe_wallet.py  test_websocket.py  trading_service.js  trading_service_v2.js  websocket_service.js
database/: init.sql
frontend/: BRAND_GUIDE.md  next.config.ts  package-lock.json  package.json
litigation-simulator/: .gitignore  Dockerfile.backend.dev  Dockerfile.frontend.dev  (+34 more)
programs/market-manager/: Anchor.toml  Cargo.toml
programs/market-manager/src/: constants.rs  errors.rs  lib.rs
programs/market-manager/src/instructions/: claim_winnings.rs  create_market.rs  mod.rs  place_bet.rs  settle_market.rs
programs/market-manager/src/state/: bet.rs  market.rs  mod.rs  pool.rs
programs/market-manager/src/utils/: amm.rs  mod.rs
(+83 files in other folders)
