[package]
name = "market-manager"
version = "0.1.0"
description = "Prediction market manager for Precedence"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
